--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 }
 * {
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
+
     <!-- where we tell the browser how to process the document: -->
         <!-- what title to put in the browser tab -->
         <!-- what style sheets to load -->
@@ -51,15 +53,15 @@
     <!-- content displayed to user (i.e. the stuff from the code block above) -->
   
     <div class="banner">
-      <img src="profile-pic.jpg" alt="Raghu Betina headshot">
+      <img src="dog.webp" alt="dog" width="100">
     </div>
 
     <div class="name">
-      Raghu Betina
+      Sade Ajayi
     </div>
 
     <div class="social-icons">
-      <a href="https://github.com/raghubetina" target="_blank">
+      <a href="https://github.com/SChance444" target="_blank">
         GitHub
       </a>
 
